# TFG

./: .gitignore  LeNet-300-100-LTH-Paper(1).ipynb  LeNet-300-100-LTH-Paper.ipynb  TODO  Untitled.ipynb  google.ipynb  osc_functions_plot.ipynb  tensors.ipynb  tesnor-pytorch.ipynb  test.ipynb  test54.ipynb  test_comparison_backprop_als.ipynb  test_tikhonov.ipynb  testo.ipynb  tn.py  tnale_nn.py  torchtr.py
.ipynb_checkpoints/: LeNet-300-100-LTH-Paper-checkpoint.ipynb  tensors-checkpoint.ipynb  tesnor-pytorch-checkpoint.ipynb  test-checkpoint.ipynb  test54-checkpoint.ipynb  test_comparison_backprop_als-checkpoint.ipynb  test_grad-checkpoint.ipynb  test_tikhonov-checkpoint.ipynb  testo-checkpoint.ipynb  tn-checkpoint.py  torchtr-checkpoint.py
.jupyter/: desktop-settings.json
doc/: compile.sh  doc.glo  doc.gls  doc.ilg  doc.ist  doc.old  doc.old2  doc.out  doc.tex  man-refs.bib  refs.bib
results/: data-tiknov1.txt  data1-ale-0.5.txt  data1-ale-1.txt  data1-ale-16.txt  data1-ale-2.txt  data1-ale-32.txt  data1-ale-4.txt  data1-ale-8.txt  data1.txt  data2-ale-0.5.txt  data2-ale-1.txt  data2-ale-16.txt  data2-ale-2.txt  data2-ale-4.txt  data2-ale-8.txt  data2.txt  data3-ale-0.5.txt  data3-ale-8.txt  data3.txt  data4-ale-0.5.txt  data4-ale-1.txt  data4-ale-2.txt  data4.txt  data5-ale-0.5.txt  data5-ale-1.txt  data5-ale-2.txt  data5-ale-4.txt  data5.txt
results_bak/: data1-ale-1.txt  data1-ale-4.txt  data1-ale-8.txt  data2-ale-1.txt  data2-ale-16.txt  data2-ale-4.txt  data2-ale-8.txt  (+10 more)
tensorcomp/: CMakeLists.txt  build.sh
tensorcomp/src/: main.cpp  tensor.h
(+61 files in other folders)
